# align

./: .gitignore  .stylish-haskell.yaml  ChangeLog.md  align.cabal  flake.nix  package.yaml  stack.yaml
app/: Main.hs
src/: Align.hs
test/: Spec.hs
