cabal-version:  2.4
name:           align
version:        0.1.0.0
license:        BSD-3-Clause
license-file:   LICENSE
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

common shared
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Werror
  default-extensions:
    ConstraintKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DataKinds
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

library
  import:         shared
  exposed-modules:
    Align
  hs-source-dirs: src
  build-depends:
    , base >= 4.7 && < 5
    , text
    , megaparsec
    , mtl
    , transformers
    , containers
    , safe

executable align
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"
  build-depends:
    , base >= 4.7 && < 5
    , align
    , optparse-generic
    , text

test-suite align-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"
  build-depends:
    , base >= 4.7 && < 5
    , align
    , hspec
